change layout design and colour

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="204dp"
         android:fontFamily="@font/cocogoose"
         android:text="doNeed"
-        android:textColor="#8F000000"
+        android:textColor="@color/dark"
         android:textSize="45sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,6 +45,7 @@
         android:paddingRight="66dp"
         android:paddingBottom="5dp"
         android:text="Login"
+        android:textColor="@color/dark"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/signUp_btn"
@@ -67,10 +68,10 @@
         android:paddingRight="50dp"
         android:paddingBottom="5dp"
         android:text="Sign Up"
-        android:textColor="#707070"
+        android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:backgroundTint="@color/white"
+        app:backgroundTint="@color/dark"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/login_btn"
         app:layout_constraintHorizontal_bias="0.333"
