--- a/app/src/main/res/drawable/text_background.xml
+++ b/app/src/main/res/drawable/text_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="10dp"/>
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/lightGrey"/>
     <stroke android:width="0dp"
         android:color="#CAC7C7"
         >
