--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,44 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
-    app:backgroundTint="@color/white"
+
 
     >
 
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@drawable/background"
+        android:background="#FFD819"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:padding="1dp"
 
         >
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="1dp"
-            >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="48dp"
-                android:fontFamily="@font/cocogoose"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:text="doNeed"
-                android:textColor="#54000000"
-
-                android:textSize="55sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <androidx.cardview.widget.CardView
@@ -78,7 +54,7 @@
                     android:layout_marginTop="32dp"
                     android:fontFamily="@font/cocogoose"
                     android:text="LOGIN"
-                    android:textColor="#504E4E"
+                    android:textColor="@color/dark"
                     android:textSize="41sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -90,10 +66,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/Login_txt"
-                    android:layout_marginTop="108dp"
+                    android:layout_marginTop="56dp"
                     android:hint="Email"
-                    app:boxBackgroundMode="filled"
                     app:boxBackgroundColor="@color/lightGrey"
+                    app:boxBackgroundMode="filled"
                     app:endIconMode="clear_text"
                     app:hintEnabled="true"
                     app:hintTextColor="@color/darkGrey"
@@ -110,12 +86,11 @@
                         android:ems="10"
                         android:inputType="textEmailAddress"
                         android:paddingStart="10dp"
-                        android:textColor="@color/black"
+                        android:textColor="@color/dark"
                         android:textColorHint="@color/yellow_musterd"
 
                         />
                 </com.google.android.material.textfield.TextInputLayout>
-
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/password_field"
@@ -124,15 +99,14 @@
                     android:layout_below="@+id/email_field"
                     android:layout_marginTop="44dp"
                     android:hint="Password"
-                    app:boxBackgroundMode="filled"
                     app:boxBackgroundColor="@color/lightGrey"
+                    app:boxBackgroundMode="filled"
                     app:hintTextColor="@color/darkGrey"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/email_field"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/email_field"
                     app:layout_constraintTop_toBottomOf="@+id/email_field"
-                    app:passwordToggleEnabled="true"
-                    >
+                    app:passwordToggleEnabled="true">
 
                     <EditText
                         android:id="@+id/login_password"
@@ -144,23 +118,52 @@
                         android:layout_marginEnd="20dp"
                         android:ems="20"
                         android:inputType="textPassword"
-                        android:textColor="@color/black"
+                        android:textColor="@color/dark"
 
                         />
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/constraintLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent">
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-
-                    android:id="@+id/txt_signUp"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="Don't have an account? Sign Up."
+                    android:orientation="horizontal"
+                    android:layout_marginTop="100dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/LoginSubmit_btn">
 
-                    android:textColor="@color/darkGrey"
-                    app:layout_constraintEnd_toEndOf="@+id/password_field"
-                    app:layout_constraintStart_toStartOf="@+id/password_field"
-                    app:layout_constraintTop_toBottomOf="@+id/password_field" />
+                    <TextView
+
+                        android:id="@+id/stirng_signUp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="Don't have an account? "
+                        android:textColor="@color/darkGrey" />
+
+                    <TextView
+
+                        android:id="@+id/txt_signUp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="Sign Up."
+                        android:textColor="@color/dark"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+
 
                 <Button
                     android:id="@+id/LoginSubmit_btn"
@@ -174,21 +177,36 @@
                     android:paddingRight="66dp"
                     android:paddingBottom="5dp"
                     android:text="Login"
-                    android:textColor="@color/darkGrey"
+                    android:textColor="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    app:backgroundTint="@color/yellow_musterd"
+                    app:backgroundTint="@color/dark"
 
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.503"
+                    app:layout_constraintHorizontal_bias="0.496"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txt_signUp"
-                    app:layout_constraintVertical_bias="0.446" />
+                    app:layout_constraintTop_toBottomOf="@+id/password_field"
+                    app:layout_constraintVertical_bias="0.19" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:fontFamily="@font/cocogoose"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="doNeed"
+
+            android:textColor="#54000000"
+            android:textSize="55sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
