--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@color/yellow_musterd"
     tools:context=".SignUpActivity">
 
     <RelativeLayout
@@ -13,17 +13,20 @@
         android:layout_centerInParent="true"
         >
 
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="25dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="43dp"
+            android:layout_marginEnd="61dp"
             android:fontFamily="@font/cocogoose"
             android:text="doNeed"
             android:textColor="#54000000"
-            android:textSize="85sp" />
-
+            android:textSize="65sp" />
 
         <androidx.cardview.widget.CardView
 
@@ -36,7 +39,8 @@
             app:cardBackgroundColor="@color/white"
             android:layout_centerHorizontal="true"
             app:cardCornerRadius="38dp"
-            app:cardElevation="8dp">
+            app:cardElevation="8dp"
+            android:alpha="0.9">
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -51,12 +55,12 @@
                     android:id="@+id/Login_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="REGISTER"
+                    android:text="SIGN UP"
                     android:textSize="41sp"
                     android:fontFamily="@font/cocogoose"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="20dp"
-                    android:textColor="#504E4E" />
+                    android:textColor="@color/dark" />
 
                 <LinearLayout
                     android:id="@+id/username_field"
@@ -73,7 +77,7 @@
                         android:text="USERNAME"
                         android:textSize="13sp"
                         android:layout_marginStart="3dp"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/dark"
                         android:fontFamily="@font/lato"
                         />
                     <EditText
@@ -103,7 +107,7 @@
                         android:text="EMAIL"
                         android:textSize="13sp"
                         android:layout_marginStart="3dp"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/dark"
                         android:fontFamily="@font/lato"
                         />
                     <EditText
@@ -132,7 +136,7 @@
                         android:text="ADDRESS"
                         android:textSize="13sp"
                         android:layout_marginStart="3dp"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/dark"
                         android:fontFamily="@font/lato"
                         />
                     <EditText
@@ -162,7 +166,7 @@
                         android:text="PHONE NUMBER"
                         android:textSize="13sp"
                         android:layout_marginStart="3dp"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/dark"
                         android:fontFamily="@font/lato"
                         />
                     <EditText
@@ -192,7 +196,7 @@
                         android:text="RECONFIRM PASSWORD"
                         android:textSize="13sp"
                         android:layout_marginStart="3dp"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/dark"
                         android:fontFamily="@font/lato"
                         />
                     <EditText
@@ -203,7 +207,7 @@
                         android:textColor="@color/black"
                         android:backgroundTint="@color/grey"
                         android:inputType="textPassword"
-
+                        app:passwordToggleEnabled="true"
                         />
                 </LinearLayout>
 
@@ -215,14 +219,15 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="40dp"
                     android:layout_marginLeft="40dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    >
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="PASSWORD"
                         android:layout_marginStart="3dp"
                         android:textSize="13sp"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/dark"
                         android:fontFamily="@font/lato"/>
                     <EditText
                         android:id="@+id/signUp_password"
@@ -235,37 +240,63 @@
                         app:passwordToggleEnabled="true"/>
                 </LinearLayout>
 
-                <TextView
 
-                    android:layout_below="@+id/signUpSubmit_btn"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="All ready have an account? Login."
-                    android:id="@+id/txt_login"
-                    android:textColor="@color/grey"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp"
-                    />
+                    android:layout_below="@+id/signUpSubmit_btn"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="87dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginEnd="102dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
 
+                    <TextView
 
+                        android:id="@+id/stirng_signUp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="Do have an account? "
+                        android:textColor="@color/darkGrey" />
+
+                    <TextView
+
+                        android:id="@+id/txt_login"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="Login."
+                        android:textColor="@color/dark"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
 
                 <Button
                     android:id="@+id/signUpSubmit_btn"
-                    android:layout_below="@+id/reconfirmPassword_field"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/reconfirmPassword_field"
+                    android:layout_alignStart="@+id/reconfirmPassword_field"
+                    android:layout_alignEnd="@+id/reconfirmPassword_field"
+                    android:layout_centerInParent="true"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginEnd="46dp"
                     android:background="@drawable/button1"
-                    android:textSize="25sp"
                     android:fontFamily="@font/cocogoose"
-                    android:textStyle="bold"
-                    android:paddingLeft="66dp"
-                    android:paddingRight="66dp"
-                    android:text="SIGN UP"
+                    android:paddingLeft="40dp"
                     android:paddingTop="2dp"
+                    android:paddingRight="40dp"
                     android:paddingBottom="2dp"
-                    android:textColor="#ffff"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="50dp"/>
+                    android:text="SIGN UP"
+                    android:textColor="#ffffff"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    app:backgroundTint="@color/dark" />
 
 
             </RelativeLayout>
