--- a/app/src/main/res/layout/details_item.xml
+++ b/app/src/main/res/layout/details_item.xml
@@ -39,6 +39,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
             >
 
             <TextView
@@ -122,6 +123,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 app:layout_constraintTop_toBottomOf="@id/details"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"/>
 
 
@@ -133,6 +135,8 @@
                 android:textSize="13sp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
+                android:textColor="@color/black"
+
                 app:layout_constraintTop_toBottomOf="@id/description"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -141,6 +145,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="34"
+                android:textColor="@color/black"
+
                 android:textSize="13sp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
@@ -155,6 +161,8 @@
                 android:textSize="13sp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
+                android:textColor="@color/black"
+
                 app:layout_constraintTop_toBottomOf="@id/quantity"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -165,6 +173,8 @@
                 android:layout_marginStart="56dp"
                 android:layout_marginTop="8dp"
                 android:text="Computer"
+                android:textColor="@color/black"
+
                 android:textSize="13sp"
                 app:layout_constraintStart_toEndOf="@id/category_text"
                 app:layout_constraintTop_toBottomOf="@id/quantity" />
@@ -178,6 +188,8 @@
                 android:layout_marginBottom="20dp"
                 android:text="Location"
                 android:textSize="13sp"
+                android:textColor="@color/black"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/category"
@@ -190,6 +202,7 @@
                 android:layout_marginStart="57dp"
                 android:layout_marginTop="8dp"
                 android:text="Sabah"
+                android:textColor="@color/black"
                 android:textSize="13sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/location_text"
