--- a/app/src/main/res/layout/fragment_donate.xml
+++ b/app/src/main/res/layout/fragment_donate.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/lightGrey"
+        android:background="@color/white"
         android:layout_marginTop="?attr/actionBarSize"
         tools:context=".donate">
 
@@ -135,6 +135,7 @@
                 android:padding="10dp"
                 android:prompt="@string/state"
                 android:elevation="2dp"
+                android:textColor="@android:color/black"
                 android:background="@drawable/text_background"
                 />
 
