--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -115,7 +115,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:paddingBottom="20dp"/>
+                android:paddingBottom="20dp"
+                android:background="@color/white"/>
 
         </LinearLayout>
 
