--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,17 +2,17 @@
 <resources>
     <color name="y">#F7C80A</color>
     <color name="test">#FFBF01</color>
-    <color name="yellow_musterd">#FFD819</color>
+    <color name="yellow_musterd">#E3B100</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#1C1C1C</color>
-    <color name="dark">#000000</color>
-    <color name="white">#FFFFFF</color>
+    <color name="black">#FFFFFFFF</color>
+    <color name="white">#1C1C1C</color>
     <color name="grey">#C6C6C6</color>
-    <color name="lightGrey">#F2F2F2</color>
-    <color name="darkGrey">#707070</color>
+    <color name="dark">#000000</color>
+    <color name="lightGrey">#707070</color>
+    <color name="darkGrey">#F2F2F2</color>
     <color name="blue">#1B75B5</color>
 
 </resources>
