--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PractiseDoNeed" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.PractiseDoNeed" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/yellow_musterd</item>
         <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorOnSurface">#9E9C9C</item>
-        <item name="placeholderTextColor">#ffffff</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="placeholderTextColor">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
