--- a/app/src/main/res/menu/donate_toolbar.xml
+++ b/app/src/main/res/menu/donate_toolbar.xml
@@ -8,5 +8,11 @@
         android:icon="@drawable/ic_baseline_done_outline_24"
         app:showAsAction="ifRoom|withText"
         />
+    <item
+        android:id="@+id/update_now"
+        android:title="UPDATE"
+        app:showAsAction="ifRoom|withText"
+        android:visible="false"
+        />
 
 </menu>
