--- a/app/src/main/res/drawable/button1.xml
+++ b/app/src/main/res/drawable/button1.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="@color/blue">
+        android:color="@color/dark">
 
     </solid>
     <corners
