--- a/app/src/main/res/layout/details_item.xml
+++ b/app/src/main/res/layout/details_item.xml
@@ -46,38 +46,39 @@
                 android:id="@+id/post_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
                 android:fontFamily="@font/cocogoose"
-                android:layout_marginTop="10dp"
                 android:text="asdasdasdsad"
-                android:textSize="20sp"
                 android:textColor="@color/black"
+                android:textSize="25sp"
                 app:layout_constraintEnd_toStartOf="@id/save"
-                app:layout_constraintHorizontal_bias="0.042"
+                app:layout_constraintHorizontal_bias="0.1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/save"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginTop="10dp"
                 android:src="@drawable/ic_save"
+                app:layout_constraintBottom_toBottomOf="@+id/post_title"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-
-                />
+                app:layout_constraintTop_toTopOf="@+id/post_title"
+                app:tint="@color/black" />
 
             <ImageView
                 android:id="@+id/option"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginEnd="0dp"
-                android:layout_marginTop="9dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginEnd="16dp"
                 android:src="@drawable/ic_option"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 android:visibility="gone"
+                app:tint="@color/black"
+
+                app:layout_constraintBottom_toBottomOf="@+id/post_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/post_title"
 
                 />
 
@@ -85,10 +86,9 @@
                 android:id="@+id/image_profile"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/post_title"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="@+id/post_title"
+                app:layout_constraintTop_toBottomOf="@+id/post_title" />
 
             <TextView
                 android:id="@+id/usernamepost"
@@ -108,37 +108,35 @@
                 android:id="@+id/details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Product Details"
-                android:textSize="13sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/image_profile"
-                app:layout_constraintStart_toStartOf="parent"/>
+                android:text="Product Details"
+                android:textColor="@color/black"
+                android:textSize="13sp"
+                android:fontFamily="@font/cocogoose"
+                app:layout_constraintStart_toStartOf="@+id/image_profile"
+                app:layout_constraintTop_toBottomOf="@id/image_profile" />
 
             <TextView
                 android:id="@+id/description"
-                android:layout_width="match_parent"
+                android:layout_width="318dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:layout_constraintTop_toBottomOf="@id/details"
                 android:textColor="@color/black"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="@+id/details"
+                app:layout_constraintTop_toBottomOf="@id/details" />
 
 
             <TextView
                 android:id="@+id/quantity_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Available Stock"
-                android:textSize="13sp"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
+                android:text="Available Stock"
                 android:textColor="@color/black"
+                android:textSize="13sp"
+                android:fontFamily="@font/cocogoose"
 
-                app:layout_constraintTop_toBottomOf="@id/description"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="@+id/description"
+                app:layout_constraintTop_toBottomOf="@id/description" />
 
             <TextView
                 android:id="@+id/quantity"
@@ -157,41 +155,40 @@
                 android:id="@+id/category_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Category"
-                android:textSize="13sp"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
+                android:text="Category"
                 android:textColor="@color/black"
+                android:textSize="13sp"
+                android:fontFamily="@font/cocogoose"
 
-                app:layout_constraintTop_toBottomOf="@id/quantity"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="@+id/quantity_text"
+                app:layout_constraintTop_toBottomOf="@id/quantity" />
 
             <TextView
                 android:id="@+id/category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="56dp"
                 android:layout_marginTop="8dp"
                 android:text="Computer"
                 android:textColor="@color/black"
 
                 android:textSize="13sp"
-                app:layout_constraintStart_toEndOf="@id/category_text"
+                app:layout_constraintStart_toStartOf="@+id/quantity"
                 app:layout_constraintTop_toBottomOf="@id/quantity" />
 
             <TextView
                 android:id="@+id/location_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:text="Location"
-                android:textSize="13sp"
                 android:textColor="@color/black"
+                android:textSize="13sp"
+                android:fontFamily="@font/cocogoose"
 
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/category_text"
                 app:layout_constraintTop_toBottomOf="@id/category"
                 app:layout_constraintVertical_bias="0.0" />
 
@@ -199,13 +196,12 @@
                 android:id="@+id/location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="57dp"
                 android:layout_marginTop="8dp"
                 android:text="Sabah"
                 android:textColor="@color/black"
                 android:textSize="13sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/location_text"
+                app:layout_constraintStart_toStartOf="@+id/category"
                 app:layout_constraintTop_toBottomOf="@id/category"
                 app:layout_constraintVertical_bias="0.015" />
 
@@ -216,6 +212,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="40dp"
                 android:text="CHAT AND DEALS WITH DONATOR"
+                android:textColor="@color/dark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
