--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="#FFD819"
+        android:background="@color/yellow_musterd"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
@@ -54,7 +54,7 @@
                     android:layout_marginTop="32dp"
                     android:fontFamily="@font/cocogoose"
                     android:text="LOGIN"
-                    android:textColor="@color/dark"
+                    android:textColor="@color/auth"
                     android:textSize="41sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -161,7 +161,7 @@
                         android:layout_height="wrap_content"
 
                         android:text="Sign Up."
-                        android:textColor="@color/dark"
+                        android:textColor="@color/auth"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -181,7 +181,7 @@
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    app:backgroundTint="@color/dark"
+                    app:backgroundTint="@color/auth"
 
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
