--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
         android:paddingRight="50dp"
         android:paddingBottom="5dp"
         android:text="Sign Up"
-        android:textColor="@color/white"
+        android:textColor="@color/auth"
         android:textSize="25sp"
         android:textStyle="bold"
         app:backgroundTint="@color/dark"
