--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -60,7 +60,7 @@
                     android:fontFamily="@font/cocogoose"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="20dp"
-                    android:textColor="@color/dark" />
+                    android:textColor="@color/auth" />
 
                 <LinearLayout
                     android:id="@+id/username_field"
@@ -77,7 +77,7 @@
                         android:text="USERNAME"
                         android:textSize="13sp"
                         android:layout_marginStart="3dp"
-                        android:textColor="@color/dark"
+                        android:textColor="@color/auth"
                         android:fontFamily="@font/lato"
                         />
                     <EditText
@@ -107,7 +107,7 @@
                         android:text="EMAIL"
                         android:textSize="13sp"
                         android:layout_marginStart="3dp"
-                        android:textColor="@color/dark"
+                        android:textColor="@color/auth"
                         android:fontFamily="@font/lato"
                         />
                     <EditText
@@ -136,7 +136,7 @@
                         android:text="ADDRESS"
                         android:textSize="13sp"
                         android:layout_marginStart="3dp"
-                        android:textColor="@color/dark"
+                        android:textColor="@color/auth"
                         android:fontFamily="@font/lato"
                         />
                     <EditText
@@ -166,7 +166,7 @@
                         android:text="PHONE NUMBER"
                         android:textSize="13sp"
                         android:layout_marginStart="3dp"
-                        android:textColor="@color/dark"
+                        android:textColor="@color/auth"
                         android:fontFamily="@font/lato"
                         />
                     <EditText
@@ -196,7 +196,7 @@
                         android:text="RECONFIRM PASSWORD"
                         android:textSize="13sp"
                         android:layout_marginStart="3dp"
-                        android:textColor="@color/dark"
+                        android:textColor="@color/auth"
                         android:fontFamily="@font/lato"
                         />
                     <EditText
@@ -227,7 +227,7 @@
                         android:text="PASSWORD"
                         android:layout_marginStart="3dp"
                         android:textSize="13sp"
-                        android:textColor="@color/dark"
+                        android:textColor="@color/auth"
                         android:fontFamily="@font/lato"/>
                     <EditText
                         android:id="@+id/signUp_password"
@@ -270,7 +270,7 @@
                         android:layout_height="wrap_content"
 
                         android:text="Login."
-                        android:textColor="@color/dark"
+                        android:textColor="@color/auth"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -296,7 +296,7 @@
                     android:textColor="#ffffff"
                     android:textSize="25sp"
                     android:textStyle="bold"
-                    app:backgroundTint="@color/dark" />
+                    app:backgroundTint="@color/auth" />
 
 
             </RelativeLayout>
