--- a/app/src/main/res/layout/details_item.xml
+++ b/app/src/main/res/layout/details_item.xml
@@ -95,14 +95,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginTop="30dp"
-                android:layout_marginStart="3dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="32dp"
                 android:fontFamily="@font/lato"
                 android:text="name"
                 android:textColor="@color/darkGrey"
                 android:textSize="12sp"
-                app:layout_constraintStart_toEndOf="@id/image_profile"
-                app:layout_constraintTop_toBottomOf="@id/post_title"/>
+                app:layout_constraintStart_toEndOf="@+id/image_profile"
+                app:layout_constraintTop_toBottomOf="@id/post_title" />
 
             <TextView
                 android:id="@+id/details"
