--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="y">#F7C80A</color>
     <color name="test">#FFBF01</color>
+    <color name="auth">#E3B100</color>
     <color name="yellow_musterd">#E3B100</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
