--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -134,10 +134,12 @@
                         android:tag="sticky">
 
                         <com.google.android.material.tabs.TabItem
+                            android:id="@+id/mypost_btn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
                         <com.google.android.material.tabs.TabItem
+                            android:id="@+id/mysaves_btn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
