--- a/app/src/main/res/layout/test_sign_up.xml
+++ b/app/src/main/res/layout/test_sign_up.xml
@@ -14,7 +14,6 @@
         tools:layout_editor_absoluteX="77dp"
         tools:layout_editor_absoluteY="30dp">
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,7 +37,6 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="100dp"
             android:layout_marginEnd="20dp"
-
             android:layout_marginBottom="30dp"
             android:alpha="0.9"
             app:cardBackgroundColor="@color/white"
@@ -50,27 +48,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <LinearLayout
+                <!--            <LinearLayout-->
+                <!--                android:layout_width="match_parent"-->
+                <!--                android:layout_height="match_parent"-->
+                <!--                android:paddingStart="15dp"-->
+                <!--                android:paddingEnd="15dp"-->
+                <!--                android:orientation="vertical">-->
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingStart="15dp"
                     android:paddingEnd="15dp"
-                    android:orientation="vertical">
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
 
                     <TextView
-                        android:layout_gravity="center_horizontal"
-                        android:id="@+id/Login_txt"
+                        android:id="@+id/signUp_txt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="SIGN UP"
-                        android:textSize="41sp"
-                        android:fontFamily="@font/cocogoose"
                         android:layout_centerHorizontal="true"
+                        android:layout_gravity="center_horizontal"
                         android:layout_marginTop="20dp"
-                        android:textColor="@color/auth" />
+                        android:fontFamily="@font/cocogoose"
+                        android:text="SIGN UP"
+                        android:textColor="@color/auth"
+                        android:textSize="41sp"
+                        app:layout_constraintBottom_toTopOf="@+id/signUp_username_layout"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/signUp_username_layout"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -78,7 +91,9 @@
                         android:hint="Username"
                         app:boxStrokeColor="@color/black"
                         app:endIconMode="clear_text"
-                        app:endIconTint="@color/black">
+                        app:endIconTint="@color/black"
+                        app:layout_constraintBottom_toTopOf="@id/signUp_email_layout"
+                        app:layout_constraintTop_toBottomOf="@+id/signUp_txt">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/signUp_username"
@@ -88,14 +103,16 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/signUp_email_layout"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:hint="Email"
-
                         app:endIconMode="clear_text"
-                        app:endIconTint="@color/black">
+                        app:endIconTint="@color/black"
+                        app:layout_constraintBottom_toTopOf="@id/signUp_address_layout"
+                        app:layout_constraintTop_toBottomOf="@+id/signUp_username_layout">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/signUp_email"
@@ -105,73 +122,83 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/signUp_address_layout"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:hint="@string/address"
                         app:endIconMode="clear_text"
-                        app:endIconTint="@color/black">
+                        app:endIconTint="@color/black"
+                        app:layout_constraintBottom_toTopOf="@id/signUp_phoneNumber_layout"
+                        app:layout_constraintTop_toBottomOf="@+id/signUp_email_layout">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/signUp_address"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/black"
                             android:inputType="textMultiLine"
-                            />
+                            android:textColor="@color/black" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/signUp_phoneNumber_layout"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:hint="Phone Number"
                         app:endIconMode="clear_text"
-                        app:endIconTint="@color/black">
+                        app:endIconTint="@color/black"
+                        app:layout_constraintBottom_toTopOf="@id/signUp_password_layout"
+                        app:layout_constraintTop_toBottomOf="@id/signUp_address_layout">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/signUp_phoneNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/black"
-                            android:inputType="phone"/>
+                            android:inputType="phone"
+                            android:textColor="@color/black" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/signUp_password_layout"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:hint="Password"
+                        app:endIconMode="password_toggle"
                         app:endIconTint="@color/black"
-                        app:endIconMode="password_toggle">
+                        app:layout_constraintBottom_toTopOf="@id/signUp_reconfirmPassword_layout"
+                        app:layout_constraintTop_toBottomOf="@id/signUp_phoneNumber_layout">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/signUp_password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/black"
-                            android:inputType="textPassword"/>
+                            android:inputType="textPassword"
+                            android:textColor="@color/black" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/signUp_reconfirmPassword_layout"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:hint="Reconfirm Password"
-                        app:endIconTint="@color/black"
                         app:endIconMode="password_toggle"
-                        >
+                        app:endIconTint="@color/black"
+                        app:layout_constraintBottom_toTopOf="@id/signUpSubmit_btn"
+                        app:layout_constraintTop_toBottomOf="@+id/signUp_password_layout">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/signUp_reconfirmPassword"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/black"
-                            android:inputType="textPassword"/>
+                            android:inputType="textPassword"
+                            android:textColor="@color/black" />
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -179,8 +206,8 @@
                         android:id="@+id/signUpSubmit_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
                         android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="12dp"
                         android:background="@drawable/button1"
                         android:fontFamily="@font/cocogoose"
                         android:paddingLeft="40dp"
@@ -191,16 +218,24 @@
                         android:textColor="#ffffff"
                         android:textSize="20sp"
                         android:textStyle="bold"
-                        app:backgroundTint="@color/auth" />
+                        app:backgroundTint="@color/auth"
+                        app:layout_constraintBottom_toTopOf="@id/login_linear"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/signUp_reconfirmPassword_layout" />
 
                     <LinearLayout
+                        android:id="@+id/login_linear"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="10dp"
                         android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="horizontal"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent">
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/signUpSubmit_btn">
 
                         <TextView
 
@@ -221,7 +256,8 @@
                             android:textStyle="bold" />
 
                     </LinearLayout>
-                </LinearLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <!--            </LinearLayout>-->
             </ScrollView>
 
         </androidx.cardview.widget.CardView>
