--- a/app/src/main/res/layout/testing.xml
+++ b/app/src/main/res/layout/testing.xml
@@ -13,7 +13,6 @@
         android:layout_centerInParent="true"
         android:padding="1dp">
 
-
         <androidx.cardview.widget.CardView
 
             android:layout_width="match_parent"
@@ -113,13 +112,18 @@
                             android:id="@+id/optionIcon"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
+                            android:layout_marginEnd="16dp"
                             android:src="@drawable/ic_option"
                             android:visibility="gone"
-                            app:layout_constraintBottom_toBottomOf="@+id/save"
-                            app:layout_constraintEnd_toEndOf="@+id/save"
-                            app:layout_constraintStart_toStartOf="@+id/save"
-                            app:layout_constraintTop_toTopOf="@+id/save"
+                            app:layout_constraintBottom_toBottomOf="@+id/post_title"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@+id/post_title"
                             app:tint="@color/black" />
+
+                        <!--                        app:layout_constraintBottom_toBottomOf="@+id/save"-->
+                        <!--                        app:layout_constraintEnd_toEndOf="@+id/save"-->
+                        <!--                        app:layout_constraintStart_toStartOf="@+id/save"-->
+                        <!--                        app:layout_constraintTop_toTopOf="@+id/save"-->
 
                         <TextView
                             android:id="@+id/post_title"
@@ -241,18 +245,18 @@
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--                    <LinearLayout-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:orientation="horizontal"-->
-<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                        app:layout_constraintEnd_toEndOf="parent"-->
-<!--                        app:layout_constraintHorizontal_bias="0.496"-->
-<!--                        app:layout_constraintStart_toStartOf="parent"-->
-<!--                        app:layout_constraintVertical_bias="0.3">-->
+                    <!--                    <LinearLayout-->
+                    <!--                        android:layout_width="wrap_content"-->
+                    <!--                        android:layout_height="wrap_content"-->
+                    <!--                        android:orientation="horizontal"-->
+                    <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+                    <!--                        app:layout_constraintEnd_toEndOf="parent"-->
+                    <!--                        app:layout_constraintHorizontal_bias="0.496"-->
+                    <!--                        app:layout_constraintStart_toStartOf="parent"-->
+                    <!--                        app:layout_constraintVertical_bias="0.3">-->
 
 
-<!--                    </LinearLayout>-->
+                    <!--                    </LinearLayout>-->
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </ScrollView>
@@ -268,7 +272,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.597"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
