--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="darkGrey">#707070</color>
     <color name="blue">#1B75B5</color>
     <color name="white2">#ffffff</color>
-
+    <color name="white3">#F4F4F4</color>
 
 
     <color name="colorPrimary">#5770f3</color>
