--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -46,27 +46,30 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
+
                 <TextView
                     android:id="@+id/Login_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="16dp"
                     android:fontFamily="@font/cocogoose"
-                    android:text="LOGIN"
+
+                    android:gravity="center_horizontal"
+                    android:text="Forgot your password?"
                     android:textColor="@color/auth"
-                    android:textSize="41sp"
+                    android:textSize="30sp"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
-
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/email_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/Login_txt"
-                    android:layout_marginTop="56dp"
+                    android:layout_marginTop="140dp"
                     android:hint="Email"
                     app:boxBackgroundColor="@color/lightGrey"
                     app:boxBackgroundMode="filled"
@@ -77,8 +80,7 @@
                     tools:layout_editor_absoluteX="0dp">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/login_email"
-
+                        android:id="@+id/email_text"
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:layout_marginStart="20dp"
@@ -92,61 +94,44 @@
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/password_field"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/email_field"
-                    android:layout_marginTop="44dp"
-                    android:hint="Password"
-                    app:boxBackgroundColor="@color/lightGrey"
-                    app:boxBackgroundMode="filled"
-                    app:hintTextColor="@color/darkGrey"
-                    app:layout_constraintEnd_toEndOf="@+id/email_field"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@+id/email_field"
-                    app:layout_constraintTop_toBottomOf="@+id/email_field"
-                    app:passwordToggleEnabled="true">
-
-                    <EditText
-                        android:id="@+id/login_password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:ems="20"
-                        android:inputType="textPassword"
-                        android:textColor="@color/dark"
-
-                        />
-
-
-                </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_marginTop="32dp"
+                    android:fontFamily="@font/lato"
+                    android:text="Enter your registered email below"
+                    android:textColor="@color/darkGrey"
+                    android:textSize="15sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/Login_txt" />
 
                 <TextView
-                    android:id="@+id/forgotPassword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="24dp"
                     android:fontFamily="@font/lato"
-                    android:text="Forgot password?"
+                    android:text="to recieve password reset instruction"
                     android:textColor="@color/darkGrey"
+                    android:textSize="15sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/password_field" />
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView" />
 
                 <LinearLayout
+                    android:id="@+id/linearLayout3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.496"
+                    app:layout_constraintHorizontal_bias="0.497"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/LoginSubmit_btn"
-                    app:layout_constraintVertical_bias="0.3">
+                    app:layout_constraintTop_toBottomOf="@+id/email_field"
+                    app:layout_constraintVertical_bias="0.104">
 
                     <TextView
 
@@ -154,23 +139,36 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
-                        android:text="Don't have an account? "
+                        android:text="Remember password? "
                         android:textColor="@color/darkGrey" />
 
                     <TextView
-
-                        android:id="@+id/txt_signUp"
+                        android:id="@+id/txt_login"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
-                        android:text="Sign Up."
+                        android:text="Login"
                         android:textColor="@color/auth"
                         android:textStyle="bold" />
 
                 </LinearLayout>
 
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="60dp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toTopOf="@+id/ResetSubmit_btn"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+                    app:layout_constraintVertical_bias="1.0"
+                    tools:ignore="MissingConstraints" />
+
                 <Button
-                    android:id="@+id/LoginSubmit_btn"
+                    android:id="@+id/ResetSubmit_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
@@ -180,18 +178,17 @@
                     android:paddingTop="5dp"
                     android:paddingRight="66dp"
                     android:paddingBottom="5dp"
-                    android:text="Login"
+                    android:text="Send"
                     android:textColor="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:backgroundTint="@color/auth"
-
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.496"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/password_field"
-                    app:layout_constraintVertical_bias="0.19" />
+                    app:layout_constraintTop_toBottomOf="@+id/email_field"
+                    app:layout_constraintVertical_bias="0.696" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
