--- a/app/src/main/res/layout/fragment_donate.xml
+++ b/app/src/main/res/layout/fragment_donate.xml
@@ -21,127 +21,128 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="80dp"
-            android:paddingTop="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="80dp"
+                android:paddingTop="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:orientation="vertical">
 
-            <RelativeLayout
-                android:layout_marginTop="10dp"
-                android:layout_width="350dp"
-                android:layout_height="280dp"
+                <RelativeLayout
+                    android:layout_marginTop="10dp"
+                    android:layout_width="@dimen/_250sdp"
+                    android:layout_height="@dimen/_200sdp"
 
-                android:layout_marginLeft="21dp"
-                android:layout_marginRight="21dp"
-                android:layout_gravity="center"
-                >
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerInside"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginRight="21dp"
                     android:layout_gravity="center"
-                    android:src="@mipmap/ic_launcher_foreground"
-                    android:id="@+id/image_add"
-                    android:padding="10dp"                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           android:background="@drawable/button_backgroynd"
+                    >
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerInside"
+                        app:layout_constraintDimensionRatio="5:4"
+                        android:layout_gravity="center"
+                        android:src="@mipmap/ic_launcher_foreground"
+                        android:id="@+id/image_add"
+                        android:background="@drawable/button_backgroynd"
+                        />
+
+                </RelativeLayout>
+
+                <Button
+                    android:id="@+id/choose_image_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Choose Image"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="6dp"
                     />
 
-            </RelativeLayout>
+                <EditText
+                    android:id="@+id/Tittle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:hint="Tittle"
+                    android:textColorHint="@color/grey"
+                    android:maxLines="5"
+                    android:background="@drawable/text_background"
+                    android:padding="10dp"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginRight="21dp"
+                    android:inputType="text"
+                    android:textColor="@color/black"
+                    android:elevation="2dp"
+                    />
 
-            <Button
-                android:id="@+id/choose_image_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Choose Image"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="6dp"
-                />
+                <EditText
+                    android:id="@+id/Description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:hint="Description"
+                    android:textColorHint="@color/grey"
+                    android:background="@drawable/text_background"
+                    android:padding="10dp"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginRight="21dp"
+                    android:textColor="@color/black"
+                    android:inputType="textMultiLine"
+                    android:maxLines="5"
+                    android:elevation="2dp"
+                    />
 
-            <EditText
-                android:id="@+id/Tittle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:hint="Tittle"
-                android:textColorHint="@color/grey"
-                android:maxLines="5"
-                android:background="@drawable/text_background"
-                android:padding="10dp"
-                android:layout_marginLeft="21dp"
-                android:layout_marginRight="21dp"
-                android:inputType="text"
-                android:textColor="@color/black"
-                android:elevation="2dp"
-                />
+                <EditText
+                    android:id="@+id/Quantity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:hint="Quantity"
+                    android:textColorHint="@color/grey"
+                    android:maxLines="5"
+                    android:background="@drawable/text_background"
+                    android:padding="10dp"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginRight="21dp"
+                    android:inputType="number"
+                    android:textColor="@color/black"
+                    android:elevation="2dp"
+                    />
 
-            <EditText
-                android:id="@+id/Description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:hint="Description"
-                android:textColorHint="@color/grey"
-                android:background="@drawable/text_background"
-                android:padding="10dp"
-                android:layout_marginLeft="21dp"
-                android:layout_marginRight="21dp"
-                android:textColor="@color/black"
-                android:inputType="textMultiLine"
-                android:maxLines="5"
-                android:elevation="2dp"
-                />
+                <Spinner
+                    android:id="@+id/categories_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginEnd="21dp"
+                    android:padding="10dp"
+                    android:prompt="@string/categories"
+                    android:elevation="2dp"
+                    android:textColor="@android:color/black"
+                    android:background="@drawable/text_background"
+                    />
 
-            <EditText
-                android:id="@+id/Quantity"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:hint="Quantity"
-                android:textColorHint="@color/grey"
-                android:maxLines="5"
-                android:background="@drawable/text_background"
-                android:padding="10dp"
-                android:layout_marginLeft="21dp"
-                android:layout_marginRight="21dp"
-                android:inputType="number"
-                android:textColor="@color/black"
-                android:elevation="2dp"
-                />
+                <Spinner
+                    android:id="@+id/state_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginEnd="21dp"
+                    android:layout_marginBottom="10dp"
+                    android:padding="10dp"
+                    android:prompt="@string/state"
+                    android:elevation="2dp"
+                    android:textColor="@android:color/black"
+                    android:background="@drawable/text_background"
+                    />
 
-            <Spinner
-                android:id="@+id/categories_spinner"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="21dp"
-                android:layout_marginEnd="21dp"
-                android:padding="10dp"
-                android:prompt="@string/categories"
-                android:elevation="2dp"
-                android:textColor="@android:color/black"
-                android:background="@drawable/text_background"
-                />
-
-            <Spinner
-                android:id="@+id/state_spinner"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="21dp"
-                android:layout_marginEnd="21dp"
-                android:layout_marginBottom="10dp"
-                android:padding="10dp"
-                android:prompt="@string/state"
-                android:elevation="2dp"
-                android:textColor="@android:color/black"
-                android:background="@drawable/text_background"
-                />
-
-        </LinearLayout>
+            </LinearLayout>
         </ScrollView>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
