--- a/app/src/main/res/layout/profile_setting2.xml
+++ b/app/src/main/res/layout/profile_setting2.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
-    >
+    tools:context=".LoginActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
@@ -56,164 +55,191 @@
                 android:fillViewport="true">
 
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <LinearLayout
-                                android:id="@+id/username_field"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="40dp"
-                                android:layout_marginTop="100dp"
-                                android:layout_marginRight="40dp"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="3dp"
-                                    android:fontFamily="@font/lato"
-                                    android:text="User Name"
-                                    android:textColor="@color/dark"
-                                    android:textSize="13sp"
-                                    android:textStyle="bold" />
-
-                                <EditText
-                                    android:id="@+id/username"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="40dp"
-                                    android:layout_marginTop="1dp"
-                                    android:backgroundTint="@color/grey"
-                                    android:inputType="textPersonName"
-                                    android:textColor="@color/black" />
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:id="@+id/email_field"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/username_field"
-                                android:layout_marginLeft="40dp"
-                                android:layout_marginTop="25dp"
-                                android:layout_marginRight="40dp"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="3dp"
-                                    android:fontFamily="@font/lato"
-                                    android:text="Email"
-                                    android:textColor="@color/dark"
-                                    android:textSize="13sp"
-                                    android:textStyle="bold" />
-
-                                <EditText
-                                    android:id="@+id/email"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="40dp"
-                                    android:layout_marginTop="1dp"
-                                    android:backgroundTint="@color/grey"
-                                    android:inputType="textEmailAddress"
-                                    android:textColor="@color/black"
-                                    />
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:id="@+id/phoneNumber_field"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/email_field"
-                                android:layout_marginLeft="40dp"
-                                android:layout_marginTop="30dp"
-                                android:layout_marginRight="40dp"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="3dp"
-                                    android:fontFamily="@font/lato"
-                                    android:text="Phone Number"
-                                    android:textColor="@color/dark"
-                                    android:textSize="13sp"
-                                    android:textStyle="bold" />
-
-                                <EditText
-                                    android:id="@+id/phoneNumber"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="40dp"
-                                    android:layout_marginTop="1dp"
-                                    android:backgroundTint="@color/grey"
-                                    android:inputType="phone"
-                                    android:textColor="@color/black" />
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:id="@+id/address_field"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/phoneNumber_field"
-                                android:layout_marginLeft="40dp"
-                                android:layout_marginTop="30dp"
-                                android:layout_marginRight="40dp"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="3dp"
-                                    android:fontFamily="@font/lato"
-                                    android:text="Address"
-                                    android:textColor="@color/dark"
-                                    android:textSize="13sp"
-                                    android:textStyle="bold" />
-
-                                <EditText
-                                    android:id="@+id/address"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="40dp"
-                                    android:layout_marginTop="1dp"
-                                    android:backgroundTint="@color/grey"
-                                    android:inputType="textPostalAddress"
-                                    android:textColor="@color/black" />
-                            </LinearLayout>
-
-
-                        </RelativeLayout>
-
                         <LinearLayout
-                            android:id="@+id/linearLayout"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/username_field"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.496"
-                            app:layout_constraintStart_toStartOf="parent">
+                            android:layout_marginLeft="40dp"
+                            android:layout_marginTop="100dp"
+                            android:layout_marginRight="40dp"
+                            android:orientation="vertical">
 
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="3dp"
+                                android:fontFamily="@font/lato"
+                                android:text="User Name"
+                                android:textColor="@color/dark"
+                                android:textSize="13sp"
+                                android:textStyle="bold" />
 
+                            <EditText
+                                android:id="@+id/username"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:layout_marginTop="1dp"
+                                android:backgroundTint="@color/grey"
+                                android:inputType="textPersonName"
+                                android:textColor="@color/black" />
                         </LinearLayout>
 
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                        <LinearLayout
+                            android:id="@+id/email_field"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/username_field"
+                            android:layout_marginLeft="40dp"
+                            android:layout_marginTop="25dp"
+                            android:layout_marginRight="40dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="3dp"
+                                android:fontFamily="@font/lato"
+                                android:text="Email"
+                                android:textColor="@color/dark"
+                                android:textSize="13sp"
+                                android:textStyle="bold" />
+
+                            <EditText
+                                android:id="@+id/email"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:layout_marginTop="1dp"
+                                android:backgroundTint="@color/grey"
+                                android:inputType="textEmailAddress"
+                                android:textColor="@color/black" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/phoneNumber_field"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/email_field"
+                            android:layout_marginLeft="40dp"
+                            android:layout_marginTop="30dp"
+                            android:layout_marginRight="40dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="3dp"
+                                android:fontFamily="@font/lato"
+                                android:text="Phone Number"
+                                android:textColor="@color/dark"
+                                android:textSize="13sp"
+                                android:textStyle="bold" />
+
+                            <EditText
+                                android:id="@+id/phoneNumber"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:layout_marginTop="1dp"
+                                android:backgroundTint="@color/grey"
+                                android:inputType="phone"
+                                android:textColor="@color/black" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/address_field"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/phoneNumber_field"
+                            android:layout_marginLeft="40dp"
+                            android:layout_marginTop="30dp"
+                            android:layout_marginRight="40dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="3dp"
+                                android:fontFamily="@font/lato"
+                                android:text="Address"
+                                android:textColor="@color/dark"
+                                android:textSize="13sp"
+                                android:textStyle="bold" />
+
+                            <EditText
+                                android:id="@+id/address"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:layout_marginTop="1dp"
+                                android:backgroundTint="@color/grey"
+                                android:inputType="textPostalAddress"
+                                android:textColor="@color/black" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/bio_field"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/address_field"
+                            android:layout_marginLeft="40dp"
+                            android:layout_marginTop="30dp"
+                            android:layout_marginRight="40dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="3dp"
+                                android:fontFamily="@font/lato"
+                                android:text="Bio"
+                                android:textColor="@color/dark"
+                                android:textSize="13sp"
+                                android:textStyle="bold" />
+
+                            <EditText
+                                android:id="@+id/bio"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:layout_marginTop="1dp"
+                                android:backgroundTint="@color/grey"
+                                android:inputType="text"
+                                android:textColor="@color/black" />
+                        </LinearLayout>
+
+
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:id="@+id/linearLayout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.496"
+                        app:layout_constraintStart_toStartOf="parent">
+
+
+                    </LinearLayout>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </ScrollView>
         </androidx.cardview.widget.CardView>
@@ -247,7 +273,7 @@
 
         </RelativeLayout>
 
-<!--        android:src="@drawable/baseline_account_circle_black_48"-->
+        <!--        android:src="@drawable/baseline_account_circle_black_48"-->
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_profile"
