--- a/app/src/main/res/layout/fragment_chatting.xml
+++ b/app/src/main/res/layout/fragment_chatting.xml
@@ -40,7 +40,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginStart="10dp"
                     android:fontFamily="@font/cocogoose"
-                    android:text="sadasdasdasd"
+                    android:text=""
                     android:textColor="@color/dark"
                     android:textSize="17sp"
                     android:textStyle="bold"
