--- a/app/src/main/res/layout/chat_left_item.xml
+++ b/app/src/main/res/layout/chat_left_item.xml
@@ -1,22 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginBottom="10dp"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:elevation="2dp">
 
     <TextView
         android:id="@+id/message_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/chat_bubble_left"
+        android:fontFamily="@font/lato"
+        android:paddingStart="8dp"
+        android:paddingTop="8dp"
+
+        android:paddingEnd="8dp"
+        android:paddingBottom="8dp"
         android:layout_marginStart="5dp"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
-        android:text="hello"
-        android:textSize="20sp"
-        android:background="@drawable/button1"
-        android:backgroundTint="@color/yellow_musterd"/>
+        android:text="Hi. How are you? Some random text here and here. I need spend more time for android dev"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintStart_toEndOf="@+id/marginSpacer_beforeMessage"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.legacy.widget.Space
+        android:id="@+id/marginSpacer_beforeMessage"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+
+        android:layout_marginStart="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/message_tail"
+        android:layout_width="14dp"
+        android:layout_height="13dp"
+        android:scaleX="-1"
+        android:src="@drawable/tail1"
+        android:layout_marginStart="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/marginSpacer_beforeMessage"
+        app:layout_constraintStart_toStartOf="@+id/marginSpacer_beforeMessage"
+        app:tint="@color/white" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginStart="6dp"
+        android:src="@drawable/tail2extension"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/marginSpacer_beforeMessage"
+        app:tint="@color/white" />
 
 
-</RelativeLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
