--- a/app/src/main/res/layout/chat_right_item.xml
+++ b/app/src/main/res/layout/chat_right_item.xml
@@ -1,23 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_marginBottom="10dp"
+android:layout_height="wrap_content">
+
+<TextView
+    android:id="@+id/message_text"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:layout_marginEnd="5dp"
+    android:layout_marginStart="8dp"
+    android:background="@drawable/chat_bubble_template"
+    android:paddingBottom="8dp"
+    android:paddingEnd="8dp"
+    android:paddingStart="8dp"
 
-    <TextView
-        android:id="@+id/message_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:layout_alignParentEnd="true"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
-        android:text="hello"
-        android:textSize="20sp"
-        android:background="@drawable/button1"
-        android:backgroundTint="@color/yellow_musterd"/>
+    android:paddingTop="8dp"
+    android:text="Hi. How are you? Some random text here and here. I need spend more time for android dev"
+    android:fontFamily="@font/lato"
+    android:textSize="15sp"
+    android:textColor="@android:color/black"
+    app:layout_constrainedWidth="true"
+    app:layout_constraintEnd_toStartOf="@+id/marginSpacer_beforeMessage"
+    app:layout_constraintHorizontal_bias="1"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+<androidx.legacy.widget.Space
+    android:id="@+id/marginSpacer_beforeMessage"
+    android:layout_width="10dp"
+    android:layout_height="10dp"
+    android:layout_marginEnd="5dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent" />
+
+<ImageView
+    android:id="@+id/message_tail"
+    android:layout_width="14dp"
+    android:layout_height="13dp"
+    android:layout_marginEnd="4dp"
+    android:src="@drawable/tail1"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="@+id/marginSpacer_beforeMessage"
+    app:tint="@color/yellow_musterd" />
+
+<ImageView
+    android:layout_width="10dp"
+    android:layout_height="10dp"
+    android:layout_marginEnd="6dp"
+    android:src="@drawable/tail2extension"
+    app:tint="@color/yellow_musterd"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toStartOf="@+id/marginSpacer_beforeMessage" />
 
 
-</RelativeLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
